<resources>

    <!--App name-->
    <string name="app_name">Edbrix</string>


    <!--Login / SignUp / Password-->
    <string name="first_name">First Name </string>
    <string name="last_name">Last Name </string>
    <string name="email">Email  </string>
    <string name="phone_number">Phone </string>
    <string name="password">Password</string>
    <string name="dob">Date of birth </string>
    <string name="about_you">About You </string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="code">Code  </string>
    <string name="name">Name  </string>
    <string name="price">Price  </string>
    <string name="payment">PayPal Email </string>
    <string name="session">Session start </string>
    <string name="title">Title </string>
    <string name="start_date">Start Date </string>
    <string name="start_time">Start Time </string>
    <string name="minutes">Minutes </string>
    <string name="availability_type">Availability Type </string>
    <string name="color_code">Color Code</string>
    <string name="capacity">Capacity </string>
    <string name="description">Description </string>

    <string name="new_account">Create a new account </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="organization_list">Organization List</string>
    <string name="course_list">Course List</string>
    <string name="course_details">Course Details</string>
    <string name="course_content">Course Content</string>
    <string name="meeting_list">Meeting List</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="password_text">  Please enter your registered email address.  </string>
    <string name="password_not_match">Password not match </string>

    <string name="schedules">Schedules</string>
    <string name="meetings">Meetings</string>
    <string name="please_wait">Please wait...</string>
    <string name="plz_wait_host_start_meeting">Please wait while host start meeting...</string>
    <string name="plz_wait_host_unavailable">Please wait host is unavailable...</string>
    <string name="category">Category</string>
    <string name="meeting_details">Meeting Details</string>
    <string name="create_live_course">Create Course</string>
    <string name="create_course">Create Course</string>
    <string name="record_video">Record Video</string>
    <string name="add_video">Add Video</string>
    <string name="add_document">Add Document</string>
    <string name="edit_live_course">Edit Course</string>
    <string name="create_video_course">Course Content</string>
    <string name="add_content">Add Content</string>
    <string name="choose_file">Choose File</string>
    <string name="courses">Courses</string>
    <string name="start_course">Start Course</string>
    <string name="start_">Start</string>
    <string name="upload">Upload</string>
    <string name="delete">Delete</string>
    <string name="set_availability">Set Availability</string>
    <string name="achievement_progress">Achievement &amp; Progress</string>
    <string name="settings">Settings</string>

    <string name="enter_ans_here">Enter answer here..</string>
    <string name="dashboard">Dashboard</string>
    <string name="course_image">Course Image</string>

    <string name="create_schedule">Course Schedule</string>
    <string name="assign_learner">Assign Learner</string>
    <string name="invite_learner">Invite Learner</string>

    <string name="profile_info">Profile Information</string>
    <string name="other_info">Other Information</string>
    <string name="email_info">Email Notifications</string>

    <string name="time_zome">Timezone</string>
    <string name="check_course_notification">Receive Course request notification</string>
    <string name="check_course_wall">Learner post/comment on wall </string>


    <string name="upload_answer">Upload Answer</string>
    <string name="download">Download</string>
    <string name="content">Content</string>
    <string name="publish">Publish</string>
    <string name="survey">Survey</string>
    <string name="test">Test</string>
    <string name="simple_content">Simple Content</string>
    <string name="web_content">Web Content</string>
    <string name="audio_content">Audio Content</string>
    <string name="video_content">Video Content</string>
    <string name="document_content">Document Content</string>
    <string name="image_content">Image Content</string>
    <string name="iframe_content">IFrame Content</string>
    <string name="presentation_content">Presentation Content</string>
    <string name="long_ans_question">Long Answer Question</string>
    <string name="img_choice_question">Image Choice Question</string>

    <string name="welcome_title">Welcome to Edbrix </string>
    <string name="welcome_description"> Edbrix, a premier collaborative education platform enables enhanced education and optimal use of resources. It offers numerous innovative benefits for education and PD. Become an exemplary institution, by ensuring superior performance without extending your resources. </string>
    <string name="submit"> Submit </string>
    <string name="submit_course"> Submit Course </string>
    <string name="complete_after"> Complete after </string>
    <string name="complete_continue"> Complete &amp; Continue </string>
    <string name="login"> Login </string>
    <string name="signin"> Sign In </string>
    <string name="signup"> Sign Up </string>
    <string name="register">Register</string>
    <string name="cancel"> Cancel </string>
    <string name="enter_email_forgot_pwd">Please enter email address you provided during the registration process. </string>
    <string name="enter_pwd_for_change_pwd">Please enter password of selected organisation. </string>
    <string name="enter_pwd_confirm_pwd">Please enter password and confirm password. </string>

    <string name="pay_content">Please use desktop web browser to Pay and Join the meeting. </string>
    <string name="connect">Connect</string>
    <string name="join">Join</string>
    <string name="camera_not_found_error">Sorry.. You are not able to record video. Camera not found on this device.</string>
    <string name="change_password">Change Password</string>
    <string name="choose_organisation">Choose your organisation</string>
    <string name="share">Share </string>
    <string name="videos">Videos </string>
    <string name="video_list">Video List </string>
    <string name="logout">Logout</string>
    <string name="app_tour">App Tour</string>
    <string name="change_profile">Upload Profile Pic</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="rename">Rename</string>
    <string name="all_meetings"> View All Meetings </string>
    <string name="all_courses"> View All Courses </string>
    <string name="about_yourself">About Yourself</string>
    <string name="save_changes">Save Changes</string>
    <string name="save_course">Save Course</string>
    <string name="save_to_course">Save To Course</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="video_library">Video Library</string>
    <string name="leave">Leave</string>
    <string name="leave_meeting">Leave Meeting</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_your_tagline">Enter your tagline</string>
    <string name="enter_about_urself">Enter about yourself</string>
    <string name="select_date_of_birth">Select date of birth</string>
    <string-array name="minutes">
        <item>Select Timespan</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>75</item>
        <item>90</item>
        <item>105</item>
        <item>120</item>
        <item>135</item>
        <item>150</item>
        <item>165</item>
        <item>180</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="availability">
        <item>Select Availability Type</item>
        <item>Video Call</item>
        <item>Connect</item>
    </string-array>

    <string-array name="name_title">
        <item> Mr </item>
        <item> Mis </item>
        <item> Dr </item>
    </string-array>

    <string name="permissions"> Permissions </string>

    <string name="invitation_title"> </string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="title_settings_dialog">Permissions Required</string>
    <string name="rationale_video_app">This app needs access to your camera and mic to make video calls</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>

    <string name="setting">Settings</string>

    <string name="action_start_archive">Start Archive</string>
    <string name="action_stop_archive">Stop Archive</string>
    <string name="action_play_archive">Play Archive</string>

    <!--Image Descriptions-->
    <string name="image_walkthrough">Walkthrough image</string>
    <string name="image_org">Organization image</string>
    <string name="image_logo">Edbrix logo</string>
    <string name="image_course">Course image</string>
    <string name="image_right_arrow">Right arrow icon</string>
    <string name="image_toolbar_left">Toolbar left image</string>
    <string name="image_toolbar_right">Toolbar right image</string>


    <!--Error messages-->
    <string name="error_edit_text">Field can not be empty </string>
    <string name="error_email_not_valid">Email address not valid </string>
    <string name="error_number_not_valid">Number not valid </string>
    <string name="error_password_not_match">Password not match </string>
    <string name="error_network"> Check network connection </string>
    <string name="error_files"> Please select a file </string>
    <string name="error_something_wrong">Something went wrong, Please try again later.</string>
    <string name="error_no_files">No files found</string>

    <!--WalkThrough-->
    <string name="skip">Skip</string>
    <string name="invite">Invite</string>
    <string name="next">Next</string>
    <string name="start">Get Started</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="create">Create</string>
    <string name="browse">Browse</string>
    <string name="back">Back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_test__drawer">Test_Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


</resources>
