<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".archiving.MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/action_start_archive1"

        android:title="@string/action_start_archive"
        app:showAsAction="ifRoom"
        android:enabled="false"
        android:visible="false" />

    <!--android:icon="@drawable/ic_action_start_archive"-->

    <item android:id="@+id/action_stop_archive1"

        android:title="@string/action_stop_archive"
        app:showAsAction="ifRoom"
        android:enabled="false"
        android:visible="false" />

    <!--android:icon="@drawable/ic_action_stop_archive"-->

    <item android:id="@+id/action_play_archive1"

        android:title="@string/action_play_archive"
        app:showAsAction="ifRoom"
        android:enabled="false"
        android:visible="false" />

    <!--android:icon="@drawable/ic_action_play_archive"-->

</menu>
