<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:padding="2dp"
    tools:context="com.edbrix.enterprise.Activities.LoginActivity">

    <ImageView
        android:id="@+id/login_image_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/edbrix_logo"
        android:contentDescription="@string/image_logo" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_image_logo"
        android:padding="3dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_input_layout_email"
        android:padding="3dp"
        android:layout_marginBottom="15dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@+id/login_input_layout_password"
        android:textColor="@android:color/white"
        android:layout_marginBottom="8dp"
        android:text="@string/login"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/login_text_view_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button_login"
        android:gravity="center"
        android:text="@string/forgot_password" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/login_text_view_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/new_account" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:indeterminate="true" />


</RelativeLayout>
