<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dashboard_app_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay"
    android:visibility="visible">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorActionBar"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <LinearLayout
            android:id="@+id/relativeLayoutLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/tool_bar_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/back_arrow_header"
                android:contentDescription="@string/image_toolbar_left"/>

            <TextView
                android:id="@+id/tool_bar_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dashboard"
                android:textColor="@color/colorMainText"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/tool_bar_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/setting_header"
                android:contentDescription="@string/image_toolbar_right"/>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

</android.support.design.widget.AppBarLayout>