<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.edbrix.enterprise.Activities.PasswordActivity">

    <ImageView
        android:id="@+id/password_password_image_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/edbrix_logo"
        android:contentDescription="@string/image_logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_password_image_logo"
        android:padding="3dp"
        android:layout_marginBottom="15dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/password_button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@+id/password_input_layout_password"
        android:textColor="@android:color/white"
        android:layout_marginBottom="8dp"
        android:text="@string/submit"/>

    <ProgressBar
        android:id="@+id/password_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:indeterminate="true" />

</RelativeLayout>
